--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -1,2 +1,108 @@
-<h1>Staticpages#home</h1>
-<p>Find me in app/views/staticpages/home.html.erb</p>
+
+
+<!-- Copywrite Area  -->
+
+<div class="copywriteArea">
+	<div class="container">
+		<div class="row">
+			<div class="span12">
+				<h3>This site helps you build a solid resume</h3>
+				<p>By asking you the right questions that bring out the best of you to potential employers</p>
+			</div>
+			
+			<div class="span2">
+
+			</div>
+		</div>	
+	</div>	
+</div>
+
+
+<!-- Line Bar -->
+
+<div class="linebar">
+
+</div>
+
+
+<!-- Main Area of Page  -->
+
+
+
+
+<div class="container">
+	
+<!-- The Visual Structure Section -->	
+	<div class="row">
+		<div class="span10">
+			<div class="visualStructureHelp">
+				<h1>First, get your resume in the right structure</h1>
+				<p>Placing your information in the right order makes sure
+					that the reader knows what to expect and whether you're worthwhile to look into</p>
+					</br>
+					<div class="vsimage">
+						Place examples here
+					</div>
+			</div>
+		</div>		
+		
+		<div class="span2">
+			<div class="notes">
+				Some Notes here 
+			</div>
+		</div>
+		
+	</div>
+
+<!-- The Questionnare Structure Section -->	
+
+	<div class="row">
+		<div class="span10">
+			<div class="QuestionnareHelp">
+				<h1>Next, answer these questions about your roles</h1>
+				<div class="test">
+					<p>These questions help tease out your achievements in a way employers will notice</p>
+				</div>
+				
+				<div class="questionArea">
+					<%= form_for :proxy do |f|%>
+						</br>
+						
+						<p>In my role as <%= f.text_field :test %> at <%= f.text_field :test %> 
+							I made the place better by doing <%= f.text_field :test %> which 
+							resulted in  <%= f.text_field :test %></p>
+							
+						</br>
+						
+						<p> If in your job you got a bonus, what was it for? If in your job, 
+							you were to get a Bonus, what did you do? </p>
+						<%= f.text_area :test, :style => "width:750px; height:100px" %>
+						</p>
+						
+						</br>
+					<% end %>
+					
+				</div>	
+				
+			</div>
+		</div>
+		
+		<div class="span2">
+
+		</div>
+		
+	</div>
+	
+<!-- The Feedback Structure Section -->	
+	
+	<div class="row">
+		<div class="span10">
+			<div class="AskForFeedback">
+				<h1>Lastly, ask us or your friends for feedback</h1>
+				<p>Email us your updated resume and we'll give you feedback</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+
