--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -41,7 +41,17 @@
 					that the reader knows what to expect and whether you're worthwhile to look into</p>
 					</br>
 					<div class="vsimage">
-						Place examples here
+						<h3>The structure should follow:</h3>
+						</br></br></br>
+						<h4>Education</h4>
+						<h5>_____________________________</h5>
+						</br></br>
+						<h4>Work Experience</h4>
+						<h5>_____________________________</h5>
+						</br></br>
+						<h4>Extracurricular Achievements</h4>
+						<h5>_____________________________</h5>
+						
 					</div>
 			</div>
 		</div>		
