--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -28,6 +28,14 @@
 <!-- Main Area of Page  -->
 
 
+<!-- Steps to making a resume -->
+
+<div class="container">
+	<div class="steps">
+		<p>1. Create the right resume structure --- 2. Answer questions about your role --- 3. Seek feedback </p>
+	</div>
+</div>
+
 
 
 <div class="container">
@@ -35,30 +43,12 @@
 <!-- The Visual Structure Section -->	
 	<div class="row">
 		<div class="span10">
-			<div class="visualStructureHelp">
-				<h1>First, get your resume in the right structure</h1>
-				<p>Placing your information in the right order makes sure
-					that the reader knows what to expect and whether you're worthwhile to look into</p>
-					</br>
-					<div class="vsimage">
-						<h3>The structure should follow:</h3>
-						</br></br></br>
-						<h4>Education</h4>
-						<h5>_____________________________</h5>
-						</br></br>
-						<h4>Work Experience</h4>
-						<h5>_____________________________</h5>
-						</br></br>
-						<h4>Extracurricular Achievements</h4>
-						<h5>_____________________________</h5>
-						
-					</div>
-			</div>
+			<%= render 'staticpages/firstform' %>
 		</div>		
 		
 		<div class="span2">
 			<div class="notes">
-				Some Notes here 
+				Different industries have slight nuances. Be aware of the nuacnces for each one. <%= link_to "Click Here" %>.
 			</div>
 		</div>
 		
