--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,8 +22,8 @@
 		font-size:10px;
 
 	}
-
-	/* Copywrite Area */
+	
+/* Copywrite Area */
 
 	.copywriteArea {
 		padding:20px 0	10px 0;
@@ -34,13 +34,19 @@
 		color:#39b54a;
 	}
 
+/* steps */
+	.steps{
+		padding-top:40px;
+	}
+
+
 /* Visual Structure */
 
 	.visualStructureHelp{
 		padding-top:40px;
 	}
 
-	.visualStructureHelp p{
+	.visualheading p{
 		padding-top:5px;
 		color:#39b54a;
 		font-size:1.7em;
@@ -48,14 +54,26 @@
 	}
 	
 	.vsimage {
-		background-color:#f68e56;
-		height:300px;
-		padding:20px;
+		
 	}
 
 	.notes{
-		padding-top:155px;
+		
 	}
+	
+	
+	/* Resume Area */
+	
+	.FirstResumeArea {
+		border: 1px solid black;
+		padding:50px 20px 20px 20px ;
+		text-align: center;
+	}
+	
+	.FirstResumeArea legend{
+		text-align:left;
+	}
+	
 
 /* Questionnare Structure */
 
