Finished initial first bit

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,7 +70,8 @@
 		text-align: center;
 	}
 	
-	.FirstResumeArea legend{
+	
+	.SecondResumeArea {
 		text-align:left;
 	}
 	
@@ -106,3 +107,6 @@
 			font-size:1.7em;
 			line-height:25px;	
 	}
+	
+	
+	
