--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -102,11 +102,12 @@
 
 
 	.AskForFeedback p{
-			padding-top:5px;
-			color:#39b54a;
-			font-size:1.7em;
-			line-height:25px;	
+		padding-top:5px;
+		color:#39b54a;
+		font-size:1.7em;
+		line-height:25px;	
 	}
-	
-	
-	
+		
+form {
+	margin-bottom:100px;
+}
