--- a/app/views/staticpages/_firstform.html.erb
+++ b/app/views/staticpages/_firstform.html.erb
@@ -1,7 +1,5 @@
 <div class="visualStructureHelp">
 
-	
-
 	<h1>First, get your resume in the right structure</h1>
 	<div class= "visualheading">
 		<p>Placing your information in the right order makes sure
@@ -43,7 +41,9 @@
 						<p>Refer to Step 2! </p>						
 						
 					</div>
-
+					
+					<p><%= f.submit "Check your resume structure out" %></p>
+					
 				<% end %>
 			</div>
 			
