--- a/app/views/staticpages/_firstform.html.erb
+++ b/app/views/staticpages/_firstform.html.erb
@@ -30,7 +30,7 @@
 						
 						<p><%= f.text_field "Company Name", :placeholder => "Company Name" %> </p>
 						<p><%= f.text_field "Job Role", :placeholder => "Job Role" %> </p>
-						<p>Refer to Step 2! </p>
+						<p>Have an option to add another job here | Refer to Step 2 for good dot points! </p>
 
 						</br></br></br>
 						
