--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,42 +1,66 @@
 @import "bootstrap";
 
-/* Fonts */
+
+$sitegreen: #39b54a;
+$topgreen: #acd373;
+$standardGrey: #636363;
 
 
-/* Globals */
 
+@font-face {
+    font-family: 'OswaldBold';
+    src: url('Oswald-Bold-webfont.eot');
+    src: url('Oswald-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Oswald-Bold-webfont.woff') format('woff'),
+         url('Oswald-Bold-webfont.ttf') format('truetype'),
+         url('Oswald-Bold-webfont.svg#OswaldBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
-/* Line Bar */
+}
+
+@font-face {
+    font-family: 'OswaldBook';
+    src: url('Oswald-Regular-webfont.eot');
+    src: url('Oswald-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Oswald-Regular-webfont.woff') format('woff'),
+         url('Oswald-Regular-webfont.ttf') format('truetype'),
+         url('Oswald-Regular-webfont.svg#OswaldBook') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 	.linebar {
-		height:3px;
-		background-color:#39b54a;
+		/*height:1px;
+		background-color:$sitegreen;*/
+		text-align:center;
+		padding-top:20px;
 	}
 
 
 /* Top of page */
 
 	.topbar {
-		color:#39b54a;
+		color:$sitegreen;
 		padding-top:5px;
 		font-size:10px;
-
 	}
 	
 /* Copywrite Area */
 
 	.copywriteArea {
-		padding:20px 0	10px 0;
-		text-align:center;
+		padding:5px 40px;
 	}
 
 	.copywriteArea p{
-		color:#39b54a;
+		color:$sitegreen;
 	}
 
 /* steps */
 	.steps{
 		padding-top:40px;
+		text-align:center;
 	}
 
 
@@ -109,7 +133,7 @@
 
 	.AskForFeedback p{
 		padding-top:5px;
-		color:#39b54a;
+		color:$sitegreen;
 		font-size:1.7em;
 		line-height:25px;	
 	}
@@ -117,3 +141,16 @@
 	form .SecondResumeArea {
 		margin-bottom:100px;
 	}
+	
+	
+	
+	.foursteps {
+		padding-top:40px;
+		text-align:center;
+		color:$standardGrey;
+	}
+	
+	.fourStepsMessage{
+		padding-bottom:40px;
+	}
+	
