--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -1,14 +1,8 @@
 <div class="copywriteArea">
-	<div class="container">
-		<div class="row">
-			<div class="span12">
-				<h3>This site helps you build a solid resume</h3>
-				<p>By asking you the right questions that bring out the best of you to potential employers</p>
-			</div>
-			
-			<div class="span2">
-
-			</div>
-		</div>	
-	</div>	
+	<%= link_to image_tag('logo.png')%>
+	
+	<div class="pull-right">
+		<p>Social Stuff</p>
+	</div>
+	
 </div>
