--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -1,5 +1,5 @@
 <div class="copywriteArea">
-	<%= link_to image_tag('logo.png')%>
+	<%= link_to image_tag('alpha-logo.png'), root_path%>
 	
 	<div class="pull-right">
 		<p>Social Stuff</p>
