--- a/app/views/staticpages/_fourSteps.html.erb
+++ b/app/views/staticpages/_fourSteps.html.erb
@@ -8,15 +8,31 @@
 	<div class="stepByStep">
 		<div class="row">
 			<div class=" span3">
-				<p>Help get your resume in the right structure</p>
+				<div class="wrapper">
+					<%= link_to image_tag('test0.jpg')%>
+				</div>	
+				<h3>Structure</h3>
+				<p>Use our structuring tool to get your resume looking right</p>
 			</div>
 			<div class="span3">
+				<div class="wrapper">
+					<%= link_to image_tag('test1.jpg')%>
+				</div>
+				<h3>Flesh out</h3>
 				<p>Ask you the right questions to make you stand out on your resume</p>
 			</div>
 			<div class="span3">
+				<div class="wrapper">
+					<%= link_to image_tag('test2.jpg')%>
+				</div>
+				<h3>Review</h3>				
 				<p>Ask your friends or ask us for honest and solid feedback</p>
 			</div>
 			<div class="span3">
+				<div class="wrapper">
+					<%= link_to image_tag('test3.jpg')%>
+				</div>
+				<h3>Manage</h3>
 				<p>Manage your job applications, with us giving you the key things employers are looking for</p>
 			</div>
 		</div>
