--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,7 +50,7 @@ $standardGrey: #636363;
 /* Copywrite Area */
 
 	.copywriteArea {
-		padding:5px 40px;
+		padding:5px 40px 0px;
 	}
 
 	.copywriteArea p{
