--- a/app/views/staticpages/_fourSteps.html.erb
+++ b/app/views/staticpages/_fourSteps.html.erb
@@ -2,18 +2,19 @@
 	
 	<div class="fourStepsMessage">
 		<h2>How you can increase your chances of employment:</h2>
-
 	</div>
 	
 	<div class="stepByStep">
 		<div class="row">
+			
 			<div class=" span3">
 				<div class="wrapper">
-					<%= link_to image_tag('test0.jpg')%>
+					<%= link_to image_tag('test0.jpg'), structure_path%>
 				</div>	
 				<h3>Structure</h3>
-				<p>Use our structuring tool to get your resume looking right</p>
+				<p>Use our structuring tool to get your resume looking right for HR</p>
 			</div>
+			
 			<div class="span3">
 				<div class="wrapper">
 					<%= link_to image_tag('test1.jpg')%>
@@ -21,6 +22,7 @@
 				<h3>Flesh out</h3>
 				<p>Ask you the right questions to make you stand out on your resume</p>
 			</div>
+			
 			<div class="span3">
 				<div class="wrapper">
 					<%= link_to image_tag('test2.jpg')%>
@@ -28,6 +30,7 @@
 				<h3>Review</h3>				
 				<p>Ask your friends or ask us for honest and solid feedback</p>
 			</div>
+			
 			<div class="span3">
 				<div class="wrapper">
 					<%= link_to image_tag('test3.jpg')%>
@@ -36,5 +39,7 @@
 				<p>Manage your job applications, with us giving you the key things employers are looking for</p>
 			</div>
 		</div>
+		
 	</div>
+	
 </div>
