--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -2,7 +2,11 @@
 	<%= link_to image_tag('alpha-logo.png'), root_path%>
 	
 	<div class="pull-right">
-		<p>Social Stuff</p>
+		<div class="copywriteAreaRight">
+		</br>
+		<p>Have a Happy <%= Time.now.strftime("%A") %> !</br>
+		Something Broken or can be improved here?</p>
+		</div>
 	</div>
 	
 </div>
