--- a/app/views/staticpages/_fourSteps.html.erb
+++ b/app/views/staticpages/_fourSteps.html.erb
@@ -17,7 +17,7 @@
 			
 			<div class="span3">
 				<div class="wrapper">
-					<%= link_to image_tag('test1.jpg')%>
+					<%= link_to image_tag('test1.jpg'), resumeQuestions_path%>
 				</div>
 				<h3>Flesh out</h3>
 				<p>Ask you the right questions to make you stand out on your resume</p>
@@ -25,9 +25,9 @@
 			
 			<div class="span3">
 				<div class="wrapper">
-					<%= link_to image_tag('test2.jpg')%>
+					<%= link_to image_tag('test2.jpg'), feedback_path%>
 				</div>
-				<h3>Review</h3>				
+				<h3>Feedback</h3>				
 				<p>Ask your friends or ask us for honest and solid feedback</p>
 			</div>
 			
@@ -36,9 +36,10 @@
 					<%= link_to image_tag('test3.jpg')%>
 				</div>
 				<h3>Manage</h3>
-				<p>Manage your job applications, with us giving you the key things employers are looking for</p>
+				<p>Manage your job applications and better understand employers</p>
 			</div>
 		</div>
+		
 		
 	</div>
 	
