--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,7 @@ $standardGrey: #636363;
 
 	.visualStructureHelp{
 		padding-top:40px;
+		color:$standardGrey;
 	}
 
 	.visualheading p{
@@ -163,3 +164,7 @@ $standardGrey: #636363;
 		margin:auto auto 10px;
 	}
 	
+	
+	.copywriteAreaRight {
+		text-align:right;
+	}
