added signup page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -168,3 +168,30 @@ $standardGrey: #636363;
 	.copywriteAreaRight {
 		text-align:right;
 	}
+	
+	
+	.alphaSignup{
+		text-align:center;
+	}
+	
+	.thumbnail {
+		padding:20px;
+	}
+	
+	.newUser{
+		padding:40px 0px;
+	}
+	
+	#error_explanation	{
+		/*  */
+		
+	
+
+		h2 {
+			font-size:1em;
+		};
+	}
+	
+	.errors {
+
+	}
