--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -4,7 +4,7 @@
 	<div class="pull-right">
 		<div class="copywriteAreaRight">
 		</br>
-		<p>Have a Happy <%= Time.now.strftime("%A") %> !</br>
+		<p>Happy <%= Time.now.strftime("%A") %> !</br>
 		Something Broken or can be improved here?</p>
 		</div>
 	</div>
