--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
+	<%=render 'staticpages/alphaSignup'%>
+	<%=render 'staticpages/linebar'%>
 	<%=render 'staticpages/fourSteps'%> 
 	<%=render 'staticpages/linebar'%>
 	<%=render 'staticpages/resumeWriteSection'%>
