--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,11 +1,8 @@
 @import "bootstrap";
 
-
 $sitegreen: #39b54a;
 $topgreen: #acd373;
 $standardGrey: #636363;
-
-
 
 @font-face {
     font-family: 'OswaldBold';
@@ -26,25 +23,8 @@ $standardGrey: #636363;
          url('Oswald-Regular-webfont.woff') format('woff'),
          url('Oswald-Regular-webfont.ttf') format('truetype'),
          url('Oswald-Regular-webfont.svg#OswaldBook') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-	.linebar {
-		/*height:1px;
-		background-color:$sitegreen;*/
 		text-align:center;
 		padding-top:20px;
-	}
-
-
-/* Top of page */
-
-	.topbar {
-		color:$sitegreen;
-		padding-top:5px;
-		font-size:10px;
 	}
 	
 /* Copywrite Area */
@@ -84,6 +64,14 @@ $standardGrey: #636363;
 
 	.notes{
 		
+	}
+	
+	
+/* Signed In Header */
+	
+	.signedInHeader{
+		height:30px;
+		background-color: $sitegreen;
 	}
 	
 	
@@ -184,9 +172,6 @@ $standardGrey: #636363;
 	
 	#error_explanation	{
 		/*  */
-		
-	
-
 		h2 {
 			font-size:1em;
 		};
@@ -194,4 +179,8 @@ $standardGrey: #636363;
 	
 	.errors {
 
+	}
+	
+	.newUser {
+		background-color:#fbe7d1;
 	}
