--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,4 +1,9 @@
 <div class="sellingpoints">
+	<h3>resumeQuery alpha</h3>	
+	</br>
+	<div class="divider" style="width:100%;background-color:white;height:1px;">
+	</div>
+	</br>
 	<h4>We will never take money from employers</h4></br>
 	<p>We made this website to help <strong>you</strong> get employment. Not forward
 		the agenda of the companies and their HR.</p>
@@ -6,11 +11,12 @@
 	<p>This allows us to maintain our independence in giving you advice.</p>
 	
 	</br>
-	<div class="divider" style="width:100%;background-color:#D6D6D6;height:1px;">
-
+	
+	<div class="divider" style="width:100%;background-color:white;height:1px;">
 	</div>
+
 	</br>
-	<h4>Interesting & relevant facts</h4>
+	<h4>Our first and foremost goal is to help you</h4>
 	<p>Information.</p>
 	</br> 
 </div>
