--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,12 +1,7 @@
 <div class="sellingpoints">
-	<h3>resumeQuery alpha</h3>	
-	</br>
-	<div class="divider" style="width:100%;background-color:white;height:1px;">
-	</div>
-	</br>
-	<h4>We will never take money from employers</h4></br>
-	<p>We made this website to help <strong>you</strong> get employment. Not forward
-		the agenda of the companies and their HR.</p>
+	<h4>We will never take money from employers</h4>
+	<p>We made this website to help <strong>you</strong> get employed and
+		we won't compromise on our ability to achieve that.</p>
 		
 	<p>This allows us to maintain our independence in giving you advice.</p>
 	
