--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
-<div class="newUser">
+<div class="infoBar">
 	<div class="container">
 		<div class="row">
-			<div class="span3 offset1">
+			<div class="span4">
 				<%= render 'devise/registrations/signup_copywrite'%>
 			</div>	
 	
-			<div class="offset1 span6">
+			<div class="offset1 span7">
 				<%= render 'devise/registrations/signup_form'%>
 			</div>
 	
