--- a/app/views/staticpages/_firstform.html.erb
+++ b/app/views/staticpages/_firstform.html.erb
@@ -1,31 +1,39 @@
 <div class="visualStructureHelp">
 
-	<h2>First, get your resume in the right structure</h2>
+	<h3>First, get your resume in the right structure</h3>
 	<div class= "visualheading">
-		<p>Placing your information in the right order makes sure
-			that HR knows what to expect and whether you're worthwhile to look into</p>
+		Placing your information in the right order makes sure
+			that HR knows what to expect and whether you're worthwhile to look into
 	</div>	
 		</br>
 		<div class="vsimage">
 			
 			<div class="FirstResumeArea">
-				<%= form_for :test do |f|%>
-					<p><%= f.text_field "First Name", :placeholder => "First Name", :style =>"width: 80px"%>
-						<%= f.text_field "Last Name", :placeholder => "Last Name", :style =>"width: 80px"%></p>
-					<p>Email: <%= f.text_field "Email", :placeholder => "Email" %></p>
-					<p>Contact Number: <%= f.text_field "Contact Details", :placeholder => "Contact Details" %></p>
-					</br>
-					
-					
+
+				<h3><%= current_user.first_name%>
+					<%= current_user.last_name%></h3>
+				<p>Email: <%= current_user.email%></p>
+				<p>
+					<% if current_user.mobile_number == nil %>
+						
+					<% else %>
+						Contact Number: <%= current_user.mobile_number %>
+					<% end %>
+					</p>
+				</br>
+				
+				<%= form_for :placeholder do |f|%>	
+				
 					<div class="SecondResumeArea">
 						<legend> Education </legend>
-						<p><%= f.text_field "University Name", :placeholder => "University" %></p>
+						<p><%= f.text_field "University Name", :placeholder => "University/School" %></p>
 						<p><%= f.text_field "Degree Name", :placeholder => "Degree Name" %></p>
 						<p><%= f.text_field "Majors or Specialisation Name", :placeholder => "Majors or Specialisation Name" %></p>
 						<p><%= f.text_field "Marks or GPA", :placeholder => "Marks or GPA" %> </p>
 						
 						</br></br></br>
 						
+					<% if false %>	
 						<legend> Work Experience </legend>
 						
 						<p><%= f.text_field "Company Name", :placeholder => "Company Name" %> </p>
@@ -40,6 +48,8 @@
 						<p><%= f.text_field "Role", :placeholder => "Role" %> </p>
 						<p>Refer to Step 2! </p>						
 						
+						
+					<% end %>	
 					</div>
 					
 					<p><%= f.submit "Check your resume structure out" %></p>
