--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,24 @@
 			</div>	
 	
 			<div class="offset1 span7">
-				<%= render 'devise/registrations/signup_form'%>
+				<div class="leftBar">
+					<h2>Sign Up</h2>
+					</br>
+					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+						<div class="errors">
+							<%= devise_error_messages! %>
+						</div>
+						<p><%= f.text_field :first_name, :placeholder => "First Name"%> 
+						   <%= f.text_field :last_name, :placeholder => "Last Name"%></p>
+						<p><%= f.email_field :email, :placeholder => "Your email address" %> 
+						   <%= f.text_field :mobile_number, :placeholder => "Optional Contact Number" %></p>
+						<p><%= f.password_field :password, :placeholder => "Password" %>
+							<%= f.password_field :password_confirmation, :placeholder => "Password Confirmation" %></p>
+						</br>
+						<div><%= f.submit "Create my account", :class => "btn btn-success" %></div>
+					<% end %>
+					<%= render "devise/shared/links" %>	
+				</div>
 			</div>
 	
 		</div>
