--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,9 +1,7 @@
 <div class="sellingpoints">
 	<h4>We will never take money from employers</h4>
-	<p>We made this website to help <strong>you</strong> get employed and
-		we won't compromise on our ability to achieve that.</p>
-		
-	<p>This allows us to maintain our independence in giving you advice.</p>
+	<p>We're committed to help <strong>you</strong> get employed and
+		we won't compromise on our independence to achieve that.</p>
 	
 	</br>
 	
