--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -6,7 +6,7 @@
 			<div class="pull-right">
 				<div class="copywriteAreaRight">
 				</br>
-				<p>Happy <%= Time.now.strftime("%A") %> ! &nbsp &nbsp &nbsp
+				<p>Happy <%= Time.now.strftime("%A") %> ! &nbsp  
 				<%= link_to 'Sign In!', new_user_session_path, :class=> "btn btn-small "%></p>
 				</div>
 			</div>
