--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -2,9 +2,15 @@
 	<div class="infoBar">
 		<div class="container">
 			<div class="row">
-				<div class="span8">
-					<h3>We want to create the best tools to help you get employed</h3></br>
-					<h3>Sign up to our alpha and help us build something that can really help</h3>
+				<div class="span7">
+					<h1>Bring out your real accomplishments to your resume </h1></br>
+					<h3>You won't have to worry about hiding your true worth with our
+						 questionnare and peer review tools. </h3>
+				</div>
+				<div class="span5">
+ 					<div class="minorTitle circleWrapper">
+
+					</div>
 				</div>
 			</div>
 		</div>
