--- a/app/views/staticpages/_fourSteps.html.erb
+++ b/app/views/staticpages/_fourSteps.html.erb
@@ -4,7 +4,7 @@
 		<div class="row">
 			
 			<div class=" span3">
-				<div class="wrapper">
+				<div class="circleWrapper">
 					<%= link_to image_tag('test0.jpg'), structure_path%>
 				</div>	
 				<h3>Structure</h3>
@@ -12,7 +12,7 @@
 			</div>
 			
 			<div class="span3">
-				<div class="wrapper">
+				<div class="circleWrapper">
 					<%= link_to image_tag('test1.jpg'), resumeQuestions_path%>
 				</div>
 				<h3>Flesh out</h3>
@@ -20,7 +20,7 @@
 			</div>
 			
 			<div class="span3">
-				<div class="wrapper">
+				<div class="circleWrapper">
 					<%= link_to image_tag('test2.jpg'), feedback_path%>
 				</div>
 				<h3>Feedback</h3>				
@@ -28,7 +28,7 @@
 			</div>
 			
 			<div class="span3">
-				<div class="wrapper">
+				<div class="circleWrapper">
 					<%= link_to image_tag('test3.jpg')%>
 				</div>
 				<h3>Manage</h3>
