--- a/app/views/staticpages/_resumeWriteSection.html.erb
+++ b/app/views/staticpages/_resumeWriteSection.html.erb
@@ -1,6 +1,6 @@
 <!-- The Visual Structure Section -->	
 <div class="row">
-	<div class="span10 offset1">
+	<div class="span10">
 		<%= render 'staticpages/firstform' %>
 	</div>		
 </div>
