--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -3,9 +3,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="span7">
-					<h1>Bring out your real accomplishments to your resume </h1></br>
-					<h3>You won't have to worry about hiding your true worth with our
-						 questionnare and peer review tools. </h3>
+					<div class="copyText">
+						<h1>Bring out your real accomplishments to your resume </h1></br>
+						<h3>Don't hide your true worth with our
+							 questionnare and peer review tools. </h3>
+					</div>	
 				</div>
 				<div class="span5">
  					<div class="minorTitle circleWrapper">
