--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,10 +7,12 @@
 		<div class="span12">
 			<ul class="inline">
 				<li><strong>resumeQuery</strong></li>
-				<li>About Us</li>
-				<li>Press</li>
-				<li>Contact Us</li>
-				<li>Privacy Policy</li>
+				<li><%= link_to 'About Us' %></li>
+				<li><%= link_to 'Press' %></li>
+				<li><%= link_to 'Contact Us' %></li>
+				<li><%= link_to 'Privacy Policy' %></li>
+				<li><%= link_to 'Blog' %></li>				
+				<li><%= link_to 'Twitter' %></li>
 			</ul>
 		</div>
 	
