Edits to the Dashboard

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,6 +124,15 @@ $siteText: #333333;
 	}
 	
 
+/* Dashboard */
+
+	.resumeView {
+		padding:40px 30px;
+		border-left:1px solid $siteGreen;
+	}
+	
+	
+
 /* Questionnare Structure */
 
 
