--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,7 +1,6 @@
 <div class="sellingpoints">
-	<h4>We will never take money from employers</h4>
-	<p>We're committed to help <strong>you</strong> get employed and
-		we won't compromise on our independence to achieve that.</p>
+	<h4>First and foremost: we help you</h4>
+	<p>Information.</p>
 	
 	</br>
 	
@@ -9,7 +8,11 @@
 	</div>
 
 	</br>
-	<h4>Our first and foremost goal is to help you</h4>
-	<p>Information.</p>
+
+	<h4>We will never take money from employers</h4>
+	<p>We're committed to help <strong>you</strong> get employed and
+		we won't compromise on our independence to achieve that.</p>
+	
+	
 	</br> 
 </div>
