--- a/app/views/staticpages/_firstform.html.erb
+++ b/app/views/staticpages/_firstform.html.erb
@@ -51,7 +51,7 @@
 					<% end %>	
 					</div>
 					
-					<p><%= f.submit "Check your resume structure out" %></p>
+					<p><%= f.submit "Check your resume structure out", :class => "btn" %></p>
 					
 				<% end %>
 			</div>
