--- a/app/views/staticpages/dashboard.html.erb
+++ b/app/views/staticpages/dashboard.html.erb
@@ -1,8 +1,19 @@
 <div class="container">
 	<div class="row">
+		<div class="span4">
+		</div>
 		
+		<div class="span8">
+			<div class="resumeView">
+				<%= render 'dashboard/current_resume'%>
+			</div>
+		</div>
+		
+	</div>	
+		
+		
+	<div class="row">	
 		<%= render 'staticpages/fourSteps' %>
-		
 		<div>
 			User Details:
 			<ul>
@@ -10,6 +21,7 @@
 			</ul>
 			
 		</div>
-		
 	</div>
+	
+	
 </div>
