--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,6 +13,9 @@
 				<li><%= link_to 'Privacy Policy' %></li>
 				<li><%= link_to 'Blog' %></li>				
 				<li><%= link_to 'Twitter' %></li>
+				<% if signed_in? %>
+					<li><%= link_to 'Help' %></li>
+				<% end %>
 			</ul>
 		</div>
 	
