--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -135,6 +135,11 @@ $white: #ffffff;
 		border-left:1px solid $siteGreen;
 	}
 	
+	.dashboardBar {
+		text-align:center;
+		padding-top:30px;
+	}
+	
 	
 
 /* Questionnare Structure */
