--- a/app/views/staticpages/dashboard.html.erb
+++ b/app/views/staticpages/dashboard.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
 	<div class="row">
 		<div class="span4">
+			<div class="dashboardBar">
+				<pre>University of New South Wales</br>Commerce </pre>
+				<p>Other 'modes' include Computer Science & Law. First Year mode as well.</p>
+				<p>"The best way to get what you want is to deserve it " -Charlie Munger</p>
+			</div>
 		</div>
 		
 		<div class="span8">
