--- a/app/views/dashboard/_current_resume.html.erb
+++ b/app/views/dashboard/_current_resume.html.erb
@@ -1,37 +1,56 @@
 <div class="text-center">
 	<h3><%= current_user.first_name%>
 		<%= current_user.last_name%></h3>
-	<p>Email: <%= current_user.email%></p>
-	<p>
-		<% if current_user.mobile_number == nil %>
+	<ul class="unstyled">
+		<li>Email: <%= current_user.email%></li> 
+
+	<% if current_user.mobile_number == nil %>
 		
-		<% else %>
-			Contact Number: <%= current_user.mobile_number %>
-		<% end %>
-		</p>
+	<% else %>
+		<li>Contact Number: <%= current_user.mobile_number %></li>
+	<% end %>
+	</p>
+	
 	</br>
 </div>
 
 
 <legend> Education <div class="pull-right"><%= link_to 'Edit', structure_path%></div></legend>
 	
-	<% if current_user.schools.count != 0 %>
-		<% current_user.schools.each do |school| %>
-			<ul class="unstyled">
-				<li><strong><%= school.name %></strong></li>
-				<li><%= school.degree %></li>
-				<li><%= school.majors %></li>
-				<li><%= school.marks%></li>
-			</ul>	
+	<% if @schoolCount != 0 %>
+		<% @schoolAll.each do |school| %>
+			<%= link_to "/schools/#{school.id}/edit" do %>
+				<ul class="unstyled">
+					<li><strong><%= school.name %></strong></li>
+					<li><%= school.degree %></li>
+					<li><%= school.majors %></li>
+					<li><%= school.marks%></li>
+				</ul>	
+			<% end %>
 		<% end %>
 
 	<% else %>	
-		<%=link_to 'Start filling in your educational details', structure_path%>	
+		<%=link_to 'Start filling in your educational details', structure_path %>	
 	<% end %>
 
 	</br></br>
 	
 <legend> Employment <div class="pull-right"><%= link_to 'Edit', structure_path%></div></legend>
 
+	<% if @employmentCount != 0 %>
+		<% @employmentAll.each do |employment| %>
+			<% link_to employment do %>
+				<ul class="unstyled">
+					<li><strong><%= employment.company %></strong></li>
+					<li><%= employment.role %></li>
+				</ul>
+			<% end %>
+		<% end %>
+	<% else %>
+		<%=link_to 'Start filling in your Employment details', structure_path %>
+	<% end %>	
+	
+				
+					
 		</br></br>
 <legend> Extracurricular Activities <div class="pull-right"><%= link_to 'Edit', structure_path%></div></legend>	
