--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
 		<div class="span12">
 			<ul class="inline">
 				<li><strong>resumeQuery</strong></li>
-				<li><%= link_to 'About Us' %></li>
+				<li><%= link_to 'About Us', about_path %></li>
 				<li><%= link_to 'Press' %></li>
 				<li><%= link_to 'Contact Us' %></li>
 				<li><%= link_to 'Privacy Policy' %></li>
