--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Staticpages#about</h1>
-<p>Find me in app/views/staticpages/about.html.erb</p>
+<div class="container">
+	<div class="row">
+		<%= render 'staticpages/fourSteps' %>
+	</div>
+</div>
