--- a/app/views/staticpages/_fourSteps.html.erb
+++ b/app/views/staticpages/_fourSteps.html.erb
@@ -5,7 +5,7 @@
 			
 			<div class=" span3">
 				<div class="circleWrapper">
-					<%= link_to image_tag('test0.jpg'), structure_path%>
+					<%= link_to image_tag('test0.jpg'), root_path%>
 				</div>	
 				<h3>Structure</h3>
 				<p>Use our structuring tool to get your resume looking right for HR</p>
