added google analytics script in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<%= yield %>
 
 	<%=render 'layouts/footer'%>
-	<%=render 'shared/google_analytics'%>
+	<%=render 'shared/google_analytics' if Rails.env.production? %>
 </body>
 
 </html>
