--- a/app/views/bullets/index.html.erb
+++ b/app/views/bullets/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Bullets#index</h1>
-<p>Find me in app/views/bullets/index.html.erb</p>
+
+<h1> Bullets </h1>
+
+<div id = "bullets">
+	<% @bullets.each do |bullet| %>
+		<div class = "bullet">
+			<%= simple_format bullet.bulletpoint %>
+		</div>
+	<% end %>
+</div>
+
+<p> <%= link_to "New Bullet point", [:new, @bulletable, :bullet ]   %>
