--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -1,10 +1,10 @@
-<h1> New Bullet point </h1>
+<h1> New Answer </h1>
 
-<%= form_for [@bulletable, @bullet]  do |f| %>
+<%= form_for [@responseable, @response]  do |f| %>
 	<!-- Insert Error form and associated div class later -->
 	
 	<div class = "field">
-		<%= f.text_area :bulletpoint, rows: 3 %>
+		<%= f.text_area :answer, rows: 3 %>
 	</div>
 	
 	<div class = "actions">
